6th-video/services.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: deploy1
  name: deploy1
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 80
  selector:
    app: deploy1
status:
  loadBalancer: {}
  
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: deploy2
  name: deploy2
spec:
  ports:
  - port: 8500
    protocol: TCP
    targetPort: 80
  selector:
    app: deploy2
status:
  loadBalancer: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: deploy3
  name: deploy3
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 80
  selector:
    app: deploy3
status:
  loadBalancer: {}
